--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
   },
   "manifest_version": 2,
   "version": "1.0.0.0",
-  "name":"Saturday Routing"
+  "name":"Magic Mana Counter"
+  "description": "Helps you keep track of hitpoints and mana during a Magic the Gathering card game"
 }
